--- a/client/style/main.scss
+++ b/client/style/main.scss
@@ -255,7 +255,7 @@ body {
 
     /* Presentation */
     background:transparent;
-    opacity:0;
+    // opacity:0;
     resize:none;
     border:none;
     outline:none;
