--- a/client/style/main.scss
+++ b/client/style/main.scss
@@ -240,7 +240,7 @@ body {
   overflow:hidden;
   @include transition(left .5s);
 
-  textarea {
+  #story {
     /* Positioning */
     position:absolute;
     width:100%;
@@ -255,7 +255,7 @@ body {
 
     /* Presentation */
     background:transparent;
-    // opacity:0;
+    opacity:0;
     resize:none;
     border:none;
     outline:none;
