--- a/client/views/journal.html
+++ b/client/views/journal.html
@@ -20,7 +20,7 @@
 
 <template name="story">
 
-  <textarea autofocus id="story" name="story" placeholder="What was the best thing that happened to you?">{{text}}</textarea>
+  <textarea style="opacity:0" autofocus id="story" name="story" placeholder="What was the best thing that happened to you {{prettyDate}}?">{{text}}</textarea>
 
 </template>
 
@@ -30,7 +30,7 @@
         <a class="media-image {{#if img}}attached{{/if}}" href="#" alt="Upload Pictures">Upload Picture</a>
     </div>
     <div class="controls">
-      <a class="controls-menu" href="#"><span class="controls-menu-date">{{date}}</span></a>
+      <a class="controls-menu" href="#"><span class="controls-menu-date">{{prettyDate}}</span></a>
       <a class="controls-save" href="#">Update</a>
       <a class="controls-share" href="#">
         <div class="controls-share-icon {{#if public}}unlock{{/if}}">Share</div>
