--- a/client/style/main.scss
+++ b/client/style/main.scss
@@ -765,3 +765,17 @@ li.sidebar-menu-sub-list-week.prev,li.sidebar-menu-sub-list-week.next {
   }
   }
 }
+
+
+
+/* ==========================================================================
+   Filepicker
+   ========================================================================== */
+
+#filepicker_shade {
+  background:none !important;
+}
+#filepicker_dialog_container {
+  border:none !important;
+  box-shadow:none !important;
+}
