--- a/client/views/journal.html
+++ b/client/views/journal.html
@@ -34,7 +34,7 @@
     </div>
     <div class="controls">
       <a class="controls-menu" href="#"><span class="controls-menu-date">{{prettyDate}}</span></a>
-      <a class="controls-save" href="#">Update</a>
+      {{#constant}}<a class="controls-save" href="#">Autosave</a>{{/constant}}
       <a class="controls-share" href="#">
         <div class="controls-share-icon {{#if public}}unlock{{/if}}">Share</div>
       </a>
