--- a/client/style/main.scss
+++ b/client/style/main.scss
@@ -192,8 +192,14 @@ body {
   z-index:-2;
   top:0;
   left:0;
-  &.loading { background-color:darken($bg,5%);
-    &::after {
+  &.loading { 
+    &+ .bg-loader {
+      opacity:1;
+    }
+  }
+}
+.bg-loader {
+      opacity:0;
       position:absolute;
       top:50%;
       left:50%;
@@ -206,17 +212,13 @@ body {
       // margin: -($borderWidthY) 0 0 -($borderWidthX);
       border: 0px solid $borderColor4;
       border-width: $borderWidthY*5 $borderWidthX*5;
-
-      @include animation(border-loading-indicator-row-2 750ms linear infinite);
       width: 0px;
       height: 0px;
+      @include animation(border-loading-indicator-row-2 750ms linear infinite);
 
       border-radius: $borderWidthY*5 $borderWidthX*5 $borderWidthY*5 $borderWidthX*5;
-    }
-  }
+      @include transition(opacity .5s);
 }
-.bg.loading::after {
-    }
 .bg-image {
   /* Positioning */
   position:absolute;
@@ -464,7 +466,7 @@ body {
       position:relative;
       float:right;
       height:36px;
-      width:100px;
+      width:160px;
 
       /* Display & Box Model */
       display:block;
